tests/snippets/parse_int_match/lower.snapshot
# Lower

## snippet
  fn snippet$main() -> i32
    block :void
      let __scrut_0: i32 | ParseError =
        call :i32 | ParseError
          callee:
            parse_int :fn(string) -> i32 | ParseError
          arg0:
            "42" :string
      ~>
        if :void
          cond:
            is i32 :bool
              __scrut_0 :i32 | ParseError
          then:
            ~>
              call :void
                callee:
                  std_io$println__string :void
                arg0:
                  "int ok" :string
          else:
            ~>
              if :void
                cond:
                  is ParseError :bool
                    __scrut_0 :i32 | ParseError
                then:
                  ~>
                    call :void
                      callee:
                        std_io$println__string :void
                      arg0:
                        "int err" :string
                else:
                  ~>
                    unreachable("non-exhaustive match (T3013 should have caught this)") :void
    block :void
      let __scrut_1: i32 | ParseError =
        call :i32 | ParseError
          callee:
            parse_int :fn(string) -> i32 | ParseError
          arg0:
            "nope" :string
      ~>
        if :void
          cond:
            is i32 :bool
              __scrut_1 :i32 | ParseError
          then:
            ~>
              call :void
                callee:
                  std_io$println__string :void
                arg0:
                  "int ok" :string
          else:
            ~>
              if :void
                cond:
                  is ParseError :bool
                    __scrut_1 :i32 | ParseError
                then:
                  ~>
                    call :void
                      callee:
                        std_io$println__string :void
                      arg0:
                        "int err" :string
                else:
                  ~>
                    unreachable("non-exhaustive match (T3013 should have caught this)") :void
    block :void
      let __scrut_2: f64 | ParseError =
        call :f64 | ParseError
          callee:
            parse_float :fn(string) -> f64 | ParseError
          arg0:
            "3.14" :string
      ~>
        if :void
          cond:
            is f64 :bool
              __scrut_2 :f64 | ParseError
          then:
            ~>
              call :void
                callee:
                  std_io$println__string :void
                arg0:
                  "float ok" :string
          else:
            ~>
              if :void
                cond:
                  is ParseError :bool
                    __scrut_2 :f64 | ParseError
                then:
                  ~>
                    call :void
                      callee:
                        std_io$println__string :void
                      arg0:
                        "float err" :string
                else:
                  ~>
                    unreachable("non-exhaustive match (T3013 should have caught this)") :void
    block :void
      let __scrut_3: f64 | ParseError =
        call :f64 | ParseError
          callee:
            parse_float :fn(string) -> f64 | ParseError
          arg0:
            "nope" :string
      ~>
        if :void
          cond:
            is f64 :bool
              __scrut_3 :f64 | ParseError
          then:
            ~>
              call :void
                callee:
                  std_io$println__string :void
                arg0:
                  "float ok" :string
          else:
            ~>
              if :void
                cond:
                  is ParseError :bool
                    __scrut_3 :f64 | ParseError
                then:
                  ~>
                    call :void
                      callee:
                        std_io$println__string :void
                      arg0:
                        "float err" :string
                else:
                  ~>
                    unreachable("non-exhaustive match (T3013 should have caught this)") :void
    return int(0) :i32
  fn concat_3(p0: string, p1: string, p2: string) -> string
    let c0: usize =
      call :usize
        callee:
          byte_len :usize
        arg0:
          p0 :string
    let c1: usize =
      add :usize
        l:
          c0 :usize
        r:
          call :usize
            callee:
              byte_len :usize
            arg0:
              p1 :string
    let c2: usize =
      add :usize
        l:
          c1 :usize
        r:
          call :usize
            callee:
              byte_len :usize
            arg0:
              p2 :string
    let buf: Buffer =
      call :Buffer
        callee:
          new_byte_buffer :Buffer
        arg0:
          c2 :usize
    call :void
      callee:
        std_core$Buffer$ByteAccess$write_string :void
      arg0:
        buf :Buffer
      arg1:
        int(0) :usize
      arg2:
        p0 :string
    call :void
      callee:
        std_core$Buffer$ByteAccess$write_string :void
      arg0:
        buf :Buffer
      arg1:
        c0 :usize
      arg2:
        p1 :string
    call :void
      callee:
        std_core$Buffer$ByteAccess$write_string :void
      arg0:
        buf :Buffer
      arg1:
        c1 :usize
      arg2:
        p2 :string
    ~>
      call :string
        callee:
          finish_buffer :string
        arg0:
          buf :Buffer
        arg1:
          c2 :usize
